2016-09-23  Martin Sebor  <msebor@redhat.com>

	PR testsuite/77713
	* gcc.dg/tree-ssa/builtin-sprintf.c (test_e_long_double): Avoid
	assuming long double is bigger than double.

2016-09-23  Jakub Jelinek  <jakub@redhat.com>

	Implement P0138R2, C++17 construction rules for enum class values
	* g++.dg/cpp1z/direct-enum-init1.C: New test.

2016-09-23  David Malcolm  <dmalcolm@redhat.com>

	PR preprocessor/77672
	* gcc.dg/tree-ssa/builtin-sprintf-warn-4.c (test): Update
	expected multiline output from first warning to reflect change
	in r240434.

2016-09-23  Thomas Preud'homme  <thomas.preudhomme@arm.com>

	* gcc.dg/tree-ssa/builtin-sprintf-warn-2.c: Fix xfail pattern.

2016-09-23  Bernd Edlinger  <bernd.edlinger@hotmail.de>
	    Tom de Vries  <tom@codesourcery.com>

	PR testsuite/77411
	* c-c++-common/ubsan/object-size-9.c: Call __builtin_exit in C++.

2016-09-23  Marek Polacek  <polacek@redhat.com>

	* c-c++-common/gomp/atomic-12.c: Skip for C++1z.
	* c-c++-common/gomp/atomic-13.c: Likewise.
	* c-c++-common/gomp/atomic-14.c: Likewise.
	* c-c++-common/pr60439.c: Remove invalid code.
	* g++.dg/expr/bitfield4.C: Robustify for C++1z.
	* g++.dg/expr/bitfield5.C: Likewise.
	* g++.dg/expr/bitfield6.C: Likewise.
	* g++.dg/expr/bool1.C: Likewise.
	* g++.dg/expr/bool3.C: Likewise.
	* g++.dg/expr/lval3.C: Likewise.
	* g++.dg/expr/lval4.C: Likewise.
	* g++.old-deja/g++.jason/bool5.C: Likewise.

2016-09-23  David Malcolm  <dmalcolm@redhat.com>

	PR preprocessor/77672
	* gcc.dg/plugin/diagnostic-test-string-literals-1.c
	(test_terminator_location): New function.

2016-09-23  Richard Biener  <rguenther@suse.de>

	* gcc.dg/tree-ssa/ssa-fre-56.c: New testcase.

2016-09-23  Matthew Wahab  <matthew.wahab@arm.com>

	* gcc.target/advsimd-intrinsics/advsimd-intrinsics.exp: Enable
	-march=armv8.2-a+fp16 when supported by the hardware.
	* gcc.target/aarch64/advsimd-intrinsics/binary_op_float.inc: New.
	* gcc.target/aarch64/advsimd-intrinsics/binary_op_no64.inc: