@@ -2,4 +2,4 @@
 
 /* { dg-do compile } */
 /* { dg-options "-O3 -mzarch -mhotpatch=0" } */
-/* { dg-error "arguments to .-mhotpatch=n,m. should be non-negative integers" "" { target *-*-* } 1 } */
+/* { dg-error "arguments to .-mhotpatch=n,m. should be non-negative integers" "" { target *-*-* } 0 } */
